Safari365 Prod/src/objects/PassengerQuotationMapping__c.object
<CustomObject>
    <fields>
        <fullName>Adult_Passenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Passenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Passenger_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Passenger Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PassengerName__c</fullName>
        <formula>Passenger__r.PassengerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PassengerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Type__c</fullName>
        <formula>Text(Passenger__r.PassengerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>PassengerQuotationMappings</relationshipLabel>
        <relationshipName>PassengerQuotationMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Quotations__c</referenceTo>
        <relationshipLabel>PassengerQuotationMappings</relationshipLabel>
        <relationshipName>PassengerQuotationMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PassengerQuotationMapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Passenger__c</columns>
        <columns>PassengerName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PQM-{00000000}</displayFormat>
        <label>PassengerQuotationMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PassengerQuotationMappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>